Add fixup for view-source: URLs. b=78810 r=bzbarsky@mit.edu sr=blizzard@mozilla.org